; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov_schema.c_pci_iov_schema_validate_device_names.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov_schema.c_pci_iov_schema_validate_device_names.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @pci_iov_schema_validate_device_names to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_iov_schema_validate_device_names(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* null, i8** %7, align 8
  br label %11

11:                                               ; preds = %33, %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i8* @nvlist_next(i32* %12, i32* %9, i8** %7)
  store i8* %13, i8** %8, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %34

15:                                               ; preds = %11
  %16 = load i8*, i8** %8, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @pci_iov_schema_validate_dev_name(i8* %16, i32 %17)
  store i32 %18, i32* %10, align 4
  %19 = load i32, i32* %10, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i32, i32* %10, align 4
  store i32 %22, i32* %3, align 4
  br label %35

23:                                               ; preds = %15
  %24 = load i32*, i32** %4, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = call i32* @nvlist_get_nvlist(i32* %24, i8* %25)
  store i32* %26, i32** %6, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @pci_iov_schema_validate_device_subsystems(i32* %27)
  store i32 %28, i32* %10, align 4
  %29 = load i32, i32* %10, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %23
  %32 = load i32, i32* %10, align 4
  store i32 %32, i32* %3, align 4
  br label %35

33:                                               ; preds = %23
  br label %11

34:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %34, %31, %21
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i8* @nvlist_next(i32*, i32*, i8**) #1

declare dso_local i32 @pci_iov_schema_validate_dev_name(i8*, i32) #1

declare dso_local i32* @nvlist_get_nvlist(i32*, i8*) #1

declare dso_local i32 @pci_iov_schema_validate_device_subsystems(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
